[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Nau.gd" type="Script" id=1]
[ext_resource path="res://Imatges/Atlas/playerShip1_blue.tres" type="Texture" id=2]
[ext_resource path="res://Imatges/VXgkg8o.png" type="Texture" id=3]
[ext_resource path="res://Imatges/Barra_vida_transparent.png" type="Texture" id=4]
[ext_resource path="res://Imatges/Barra_vida.png" type="Texture" id=5]
[ext_resource path="res://Scripts/TextureProgress.gd" type="Script" id=6]
[ext_resource path="res://Sons/laser1.wav" type="AudioStream" id=7]
[ext_resource path="res://Sons/motor.ogg" type="AudioStream" id=8]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00740741, 0.414097, 0.801762 )
colors = PoolColorArray( 0, 0.0361328, 1, 1, 0.0078125, 0.904076, 1, 1, 0.801562, 0.980815, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.99434, 0.225 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 5, 1, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 12.0
angle_random = 1.0
scale = 0.07
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Animation" id=7]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Nau" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Dreta" type="Position2D" parent="."]
position = Vector2( 47, -6 )

[node name="Esquerra" type="Position2D" parent="."]
position = Vector2( -47, -6 )

[node name="TimerDispara" type="Timer" parent="."]
wait_time = 0.2

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 0, 41 )
rotation = 1.5708
emitting = false
amount = 50
lifetime = 0.4
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 3 )
normal_map = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -46.2463, -4.04086, -36.6163, 4.12371, -10.7618, -9.79792, -6.36549, -35.8617, 6.19539, -35.8617, 9.96365, -9.58857, 35.9228, 4.33307, 46.5995, -4.2502, 45.1341, 23.2791, 41.9939, 19.5108, 12.4758, 25.5819, 5.98605, 35.6306, -5.00472, 35.7353, -12.5412, 26.4193, -41.5359, 19.1968, -44.8855, 23.2791 )

[node name="Centre" type="Position2D" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="Centre"]
margin_left = -85.8916
margin_top = -83.8916
margin_right = 86.1084
margin_bottom = -57.8916
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="Centre/TextureProgress"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 7 )

[node name="SoLaser" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="SoMotor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 24.0

[connection signal="timeout" from="TimerDispara" to="." method="_on_TimerDispara_timeout"]
